Handle poster_path that may not have info from the API

--- a/MovieViewer/Info.plist
+++ b/MovieViewer/Info.plist
@@ -40,14 +40,10 @@
 	</array>
     
    
-    <key>NSExceptionDomains</key>
-    <dict>
-        <key>api.themoviedb.org</key>
-        <dict>
-            <key>NSExceptionAllowsInsecureHTTPLoads</key>
-            <true/>
-        </dict>
-    </dict>
+   <key>NSAppTransportSecurity</key>
+   <dict>
+       <key>NSAllowsArbitraryLoads</key><true/>
+   </dict>
  
 </dict>
 </plist>
